[gd_scene load_steps=12 format=2]

[ext_resource path="res://Sprites/UI/Main/Windows/StatScreen.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/Fonts/dum1.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/UI/StatScreen.gd" type="Script" id=3]
[ext_resource path="res://Sprites/UI/Main/ButtonEmpty_Darkened.png" type="Texture" id=4]
[ext_resource path="res://Sprites/UI/Main/Stat_Panel.png" type="Texture" id=5]
[ext_resource path="res://Resources/UI_Theme.tres" type="Theme" id=6]

[sub_resource type="DynamicFont" id=1]
size = 30
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 26
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 34
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 36
use_filter = true
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 20
font_data = ExtResource( 2 )

[node name="StatScreen" type="TextureRect"]
margin_right = 554.0
margin_bottom = 1080.0
mouse_filter = 0
texture = ExtResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerName" type="Label" parent="."]
margin_left = 118.0
margin_top = 55.0
margin_right = 437.0
margin_bottom = 86.0
custom_fonts/font = SubResource( 1 )
text = "Player_Name"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Label" parent="."]
margin_left = 10.0
margin_top = 90.0
margin_right = 129.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Level
1"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExperienceCurrent" type="Label" parent="."]
margin_left = 134.0
margin_top = 90.0
margin_right = 329.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Experience
0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExperienceNextLevel" type="Label" parent="."]
margin_left = 333.0
margin_top = 90.0
margin_right = 532.0
margin_bottom = 147.0
custom_fonts/font = SubResource( 2 )
text = "Next level
1500"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 166.0
margin_right = 176.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
text = "Strength"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strength" type="Label" parent="."]
margin_left = 177.0
margin_top = 166.0
margin_right = 250.0
margin_bottom = 214.0
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StrengthButton" type="TextureButton" parent="."]
margin_left = 253.0
margin_top = 165.0
margin_right = 323.0
margin_bottom = 235.0
rect_scale = Vector2( 0.71, 0.71 )
disabled = true
texture_disabled = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DexterityLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 225.0
margin_right = 176.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 3 )
text = "Dexterity"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dexterity" type="Label" parent="."]
margin_left = 177.0
margin_top = 225.0
margin_right = 250.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DexterityButton" type="TextureButton" parent="."]
margin_left = 253.0
margin_top = 225.0
margin_right = 323.0
margin_bottom = 295.0
rect_scale = Vector2( 0.71, 0.71 )
disabled = true
texture_disabled = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntelligenceLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 284.0
margin_right = 176.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 3 )
text = "Intelligence"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Intelligence" type="Label" parent="."]
margin_left = 177.0
margin_top = 284.0
margin_right = 250.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IntelligenceButton" type="TextureButton" parent="."]
margin_left = 253.0
margin_top = 284.0
margin_right = 323.0
margin_bottom = 354.0
rect_scale = Vector2( 0.71, 0.71 )
disabled = true
texture_disabled = ExtResource( 4 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ArmourLabel" type="Label" parent="."]
margin_left = 10.0
margin_top = 344.0
margin_right = 176.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 3 )
text = "Armour"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Armour" type="Label" parent="."]
margin_left = 177.0
margin_top = 344.0
margin_right = 250.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 3 )
text = "10"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthLabel" type="Label" parent="."]
margin_left = 329.0
margin_top = 225.0
margin_right = 458.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 3 )
text = "Health"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Health" type="Label" parent="."]
margin_left = 459.0
margin_top = 225.0
margin_right = 532.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 3 )
text = "100"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ManaLabel" type="Label" parent="."]
margin_left = 329.0
margin_top = 284.0
margin_right = 458.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 3 )
text = "Mana"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Mana" type="Label" parent="."]
margin_left = 459.0
margin_top = 284.0
margin_right = 532.0
margin_bottom = 332.0
custom_fonts/font = SubResource( 3 )
text = "50"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
margin_left = 11.0
margin_top = 406.0
margin_right = 532.0
margin_bottom = 827.0
rect_min_size = Vector2( 521, 400 )
theme = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="ScrollContainer"]
margin_right = 521.0
margin_bottom = 131.0

[node name="VBoxContainer" type="VBoxContainer" parent="ScrollContainer/MarginContainer"]
margin_right = 521.0
margin_bottom = 131.0
rect_min_size = Vector2( 521, 0 )
alignment = 1

[node name="DamageLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_right = 521.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 4 )
text = "   Damage"

[node name="Damage" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 41.0
margin_right = 521.0
margin_bottom = 41.0
alignment = 1

[node name="DamageStatValues" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/Damage"]
margin_left = 258.0
margin_right = 258.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageNames" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/Damage"]
margin_left = 262.0
margin_right = 262.0
custom_constants/separation = 5
alignment = 2

[node name="DefenseLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 45.0
margin_right = 521.0
margin_bottom = 82.0
custom_fonts/font = SubResource( 4 )
text = "   Defense"

[node name="Defense" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 86.0
margin_right = 521.0
margin_bottom = 86.0
alignment = 1

[node name="DefenseStatValues" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/Defense"]
margin_left = 258.0
margin_right = 258.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DefenseNames" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/Defense"]
margin_left = 262.0
margin_right = 262.0
custom_constants/separation = 5
alignment = 2

[node name="UtilityLabel" type="Label" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 90.0
margin_right = 521.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 4 )
text = "   Utility"

[node name="Utility" type="HBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer"]
margin_top = 131.0
margin_right = 521.0
margin_bottom = 131.0
alignment = 1

[node name="UtilityStatValues" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/Utility"]
margin_left = 258.0
margin_right = 258.0
custom_constants/separation = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UtilityNames" type="VBoxContainer" parent="ScrollContainer/MarginContainer/VBoxContainer/Utility"]
margin_left = 262.0
margin_right = 262.0
custom_constants/separation = 5
alignment = 2

[node name="StatPointsBackground" type="TextureRect" parent="."]
visible = false
margin_left = 328.0
margin_top = 343.086
margin_right = 533.0
margin_bottom = 393.086
texture = ExtResource( 5 )

[node name="StatPointsLabel" type="Label" parent="StatPointsBackground"]
margin_left = 1.0
margin_top = 1.0
margin_right = 130.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 5 )
text = "Stat Points Remaining"
align = 1
valign = 1
autowrap = true
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatPoints" type="Label" parent="StatPointsBackground"]
margin_left = 131.0
margin_top = 1.0
margin_right = 204.0
margin_bottom = 49.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StrengthButton" to="." method="_on_StrengthButton_pressed"]
[connection signal="pressed" from="DexterityButton" to="." method="_on_DexterityButton_pressed"]
[connection signal="pressed" from="IntelligenceButton" to="." method="_on_IntelligenceButton_pressed"]
